--- a/export.cfg
+++ b/export.cfg
@@ -19,6 +19,7 @@ convert_text_scenes=true
 
 filter=""
 filter_exclude=""
+filter_exclude_dir=""
 type="resources"
 
 [platform:Android]
@@ -27,6 +28,7 @@ apk_expansion/SALT=""
 apk_expansion/enable=false
 apk_expansion/public_key=""
 architecture/arm=true
+architecture/arm64=false
 architecture/x86=false
 command_line/extra_args=""
 custom_package/debug=""
@@ -212,8 +214,8 @@ user_permissions/6=""
 user_permissions/7=""
 user_permissions/8=""
 user_permissions/9=""
-version/code=6
-version/name="1.0.4"
+version/code=9
+version/name="1.0.5"
 
 [platform:BlackBerry 10]
 
@@ -259,9 +261,9 @@ application/icon="res://high_res_icon.png"
 application/identifier="org.godotengine.macgame"
 application/info="Made with Godot Engine"
 application/name=""
-application/short_version="1.0.3"
+application/short_version="1.0.5"
 application/signature="godotmacgame"
-application/version="1.0.3"
+application/version="1.0.5"
 codesign/entitlements=""
 codesign/identity=""
 custom_package/debug=""
