Fix Spanish translations and mastodon link

--- a/engine.cfg
+++ b/engine.cfg
@@ -1,6 +1,6 @@
 [application]
 
-name="Cow's Revenge"
+name="CowsRevenge"
 main_scene="res://Scenes/Menu/main_menu.tscn"
 icon="res://high_res_icon.png"
 
